--- a/frontend/src/Components/Vision/Vision.css
+++ b/frontend/src/Components/Vision/Vision.css
@@ -5,11 +5,11 @@
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    margin: 1em 0;
+    margin: 1rem 0;
     padding: 2rem;
   }
   .card {
-    width: 35rem;
+    /* width: 35rem; */
     height: auto;
     margin-bottom: 1em;
     box-shadow: rgba(0, 0, 0, 0.2) 0 3px 5px -1px,
