--- a/frontend/src/Components/Navigation/Navbar.css
+++ b/frontend/src/Components/Navigation/Navbar.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Work+Sans:wght@400;500;600;700&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Work+Sans:wght@400;500;600;700&display=swap");
 
 * {
   padding: 0;
@@ -9,18 +9,18 @@
 
 html {
   font-size: 62.5%;
-  /* 1rem = 10px */
+  /* 1rem = 10px
   overflow-x: hidden;
 }
 
 body {
   overflow-x: hidden;
-}
+} */
 
 .header {
   width: 100%;
   padding: 0 4rem;
-  height: 10rem;
+  height: 6rem;
   display: flex;
   /* margin-bottom: 2em; */
   justify-content: space-between;
@@ -32,8 +32,8 @@ body {
 }
 
 .header .logo {
-  height: 10rem;
-  width: 10rem;
+  height: 6rem;
+  width: 6rem;
 }
 
 .navbar-list {
@@ -47,7 +47,7 @@ body {
   display: inline-block;
   text-transform: uppercase;
   text-decoration: none;
-  font-size: 2rem;
+  font-size: 1.4rem;
   font-weight: 500;
   color: #212529;
   transition: all 0.3s;
@@ -65,8 +65,8 @@ body {
 }
 
 .mobile-nav-icon {
-  width: 4rem;
-  height: 4rem;
+  width: 2rem;
+  height: 2rem;
   color: #212529;
 }
 
