--- a/frontend/src/Components/Navigation/Navbar.css
+++ b/frontend/src/Components/Navigation/Navbar.css
@@ -17,12 +17,24 @@ body {
   overflow-x: hidden;
 } */
 
-.header {
+.logo {
+  height: 6rem;
+  width: 6rem;
+}
+
+.header{
+  position: fixed;
+  top: 0;
+  z-index: 999;
+  height: 6rem;
+  width:100%;
+}
+/* .header {
   width: 100%;
   padding: 0 4rem;
   height: 6rem;
   display: flex;
-  /* margin-bottom: 2em; */
+
   justify-content: space-between;
   align-items: center;
   background-color: #eefffc;
@@ -74,9 +86,6 @@ body {
   display: none;
 }
 
-/* ===========================================
-Hero and Service Section Start
-======================================= */
 .section-hero,
 .section-services {
   padding: 9.6rem 0;
@@ -97,11 +106,6 @@ Hero and Service Section Start
   font-size: 3.2rem;
 }
 
-/* ===========================================
-Responsive Codes 
-======================================= */
-
-/* 980px  */
 @media (max-width: 62em) {
   .mobile-navbar-btn {
     display: block;
@@ -131,7 +135,7 @@ Responsive Codes
   }
 
   .navbar {
-    /* display: none; */
+    display: none;
     width: 100%;
     height: 100vh;
     background: #e7f5ff;
@@ -143,7 +147,7 @@ Responsive Codes
     justify-content: center;
     align-items: center;
 
-    /* to get the tranisition  */
+    to get the tranisition 
     transform: translateX(100%);
     transition: all 0.5s linear;
 
@@ -173,7 +177,7 @@ Responsive Codes
   }
 }
 
-/* Below 560px  */
+Below 560px 
 @media (max-width: 35em) {
   .header {
     padding: 0 2.4rem;
@@ -182,4 +186,4 @@ Responsive Codes
   .header .logo {
     width: 30%;
   }
-}
+} */
