--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -89,3 +89,7 @@ button:hover {
   background: linear-gradient(to right, #66B2FF, #003366);
   color:#fff;
 }
+.background-clr{
+  background:  linear-gradient(90deg, #53bf9f  0%, #177e5f  100%);
+  color:#fff;
+}
